--- a/backend/public/style.css
+++ b/backend/public/style.css
@@ -13,13 +13,13 @@ body {
 }
 
 ul {
-  list-style: none;
+  list-style: inside;
   padding: 0;
 }
 
 li {
   padding: 10px;
   margin-top: 10px;
-  background: #eee;
+  background: #f7b819;
   border-radius: 4px;
 }
